GMM_Main/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>A133_Audit_reviewed_for_FY_ending__c</fullName>
        <defaultValue>false</defaultValue>
        <label>A133 Audit reviewed for FY ending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>A133_Audit_reviewed_for_FY_ending_date__c</fullName>
        <label>A133 Audit reviewed for FY ending date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>A133_not_required_because__c</fullName>
        <defaultValue>false</defaultValue>
        <label>A133 not required because</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ActiveAmericorpsOrSeniorCorpsAward__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ActiveAmericorpsOrSeniorCorpsAward</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Street Address 1</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Street Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assistant_Title__c</fullName>
        <description>As per #2695</description>
        <formula>State_Program_Assistant__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assistant Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment_URL_del__c</fullName>
        <defaultValue>&quot;https://cns--devsb12.cs32.my.salesforce.com/a07r00000008ndJ&quot;</defaultValue>
        <inlineHelpText>Go To attachments page</inlineHelpText>
        <label>Attachment URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCR_Active_Until__c</fullName>
        <label>CCR Active Until - Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCR_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CCR Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CNCS_Type__c</fullName>
        <label>CNCS Type</label>
        <picklist>
            <picklistValues>
                <fullName>Consultants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Headquarters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCCC Campus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Office</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cell__c</fullName>
        <label>Cell</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>City1__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <description>Created as part of new requirements from Khalid on 4/11/2016.</description>
        <label>Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coff_Code__c</fullName>
        <description>Created as part of new requirements from Khalid on 4/11/2016.</description>
        <label>Coff Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Corrective_Action_Completed1__c</fullName>
        <label>Corrective Action Completed</label>
        <picklist>
            <controllingField>A133_Audit_reviewed_for_FY_ending__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Corrective_Action_Completed__c</fullName>
        <label>Corrective Action Completed</label>
        <picklist>
            <controllingField>IG_Audit_Issued_on__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cost_Basis_Description__c</fullName>
        <description>Used by CloudBudget.</description>
        <label>Cost Basis Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_On__c</fullName>
        <label>Created On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_from_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created from Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DHHS_Print_Mgmt_System__c</fullName>
        <defaultValue>&quot;http://www.dpm.psc.gov/access_pms/system_status.aspx&quot;</defaultValue>
        <label>DHHS Print Mgmt System</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DUNS_4__c</fullName>
        <label>DUNS Plus 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS_Verification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DUNS Verification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DUNS__c</fullName>
        <inlineHelpText>DUNS number must be entered for your organization in order to submit an application. If needed please contact Dun &amp; Bradstreet at http://www.dnb.com/get-a-duns-number.html to register for a DUNS number.</inlineHelpText>
        <label>DUNS #</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daytime_Phone__c</fullName>
        <label>Daytime Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Please Specify other details here</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Descriptions__c</fullName>
        <inlineHelpText>Please Enter Description</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Did_not_meet_500_000_threshold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Did not meet $500,000 threshold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Director_Title__c</fullName>
        <description>As per #2695</description>
        <formula>State_Program_Director__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Director Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Do_you_have_anIndirect_Cost_Rate__c</fullName>
        <inlineHelpText>If you have a current, approved indirect cost rate, it must be reported to CNCS &amp; if you intend to request a budget including indirect costs. This info will be used in all award negotiation/reviews until it&apos;s superseded by a new approved rate or expires.</inlineHelpText>
        <label>Do you have an Indirect Cost Rate?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>AAE Waiver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAE Waiver Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authorized Representative Confirmation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commission Executive Order&quot;</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Draft__c</fullName>
        <label>Draft</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EIN_Suffix__c</fullName>
        <label>EIN Suffix</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EIN__c</fullName>
        <label>EIN</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_From__c</fullName>
        <inlineHelpText>The effective from date is found on your indirect cost rate document. If usingthe 10-percent of MTDC rate, enter the date your organization formally notifiedthe federal or state agency.</inlineHelpText>
        <label>Effective From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_To__c</fullName>
        <inlineHelpText>The effective to date is found on your indirect cost rate document. If yourorganization has received approval to extend your rate, enter the end date ofthe extension.</inlineHelpText>
        <label>Effective To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email1__c</fullName>
        <inlineHelpText>Please provide the details.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <inlineHelpText>Please provide an email address where the organization can be contacted</inlineHelpText>
        <label>Organization Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Evening_Phone__c</fullName>
        <label>Evening Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Excluded_party_list_reviewed_on__c</fullName>
        <label>Excluded Party List Reviewed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extended__c</fullName>
        <label>Extended?</label>
        <picklist>
            <controllingField>Rate_Type__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Type__c</fullName>
        <label>External Type</label>
        <picklist>
            <picklistValues>
                <fullName>Federal Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>For Profit Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher Education Organization - Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher Education Organization - State Controlled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indian Tribe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Government - County</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Government - Municipal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Government - Township</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Native American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Non Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Commission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Education Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other State Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion from VISTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion from TRUST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion from GARP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FAPIIS_Reviewed__c</fullName>
        <label>FAPIIS Reviewed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FAPIIS_Reviewed_on__c</fullName>
        <label>FAPIIS Reviewed on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FAPIIS__c</fullName>
        <defaultValue>&quot;https://www.fapiis.gov/fapiis/index.jsp&quot;</defaultValue>
        <label>FAPIIS</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Fax1__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Fed_Audit_Clearinghouse__c</fullName>
        <defaultValue>&quot;http://harvester.census.gov/sac/&quot;</defaultValue>
        <label>Fed Audit Clearinghouse</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Financial_Management_Capability__c</fullName>
        <label>Financial Management Capability</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Findings_Issues1__c</fullName>
        <label>Findings/Issues</label>
        <picklist>
            <controllingField>A133_Audit_reviewed_for_FY_ending__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Findings_Issues__c</fullName>
        <label>Findings/Issues</label>
        <picklist>
            <controllingField>IG_Audit_Issued_on__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>For_Profit_Organization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For Profit Organization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Guidestar__c</fullName>
        <defaultValue>&quot;http://www.guidestar.org/&quot;</defaultValue>
        <label>Guidestar</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Org ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IG_Audit_Issued_on__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IG Audit Issued on</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IG_Audit_Issued_on_date__c</fullName>
        <label>IG Audit Issued on date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IG_Audit_in_progress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IG Audit in progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>If_Others_Please_Specify__c</fullName>
        <label>If Others,Please Specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indirect_Cost_Rate_Submitted__c</fullName>
        <label>Indirect Cost Rate Submitted</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Issuing_Agency__c</fullName>
        <label>Issuing Agency</label>
        <picklist>
            <controllingField>Rate_Type__c</controllingField>
            <picklistValues>
                <fullName>CNCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Departmentof Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Departmentof Commerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Departmentof Defense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Departmentof Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Departmentof Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Departmentof Health and Human Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Departmentof Homeland Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Departmentof HUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Departmentof Justice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Departmentof Labor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Departmentof Interior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Departmentof Treasury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Departmentof Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Departmentof Veteran Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EnvironmentProtection Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NASA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NationalScience Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GeneralServices Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NuclearRegulatory Commission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Officeof Personnel Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SmallBusiness Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SocialSecurity Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USDepartment of State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USAgency for International Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <formula>TEXT(ID__c)</formula>
        <label>Legacy OrgId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <label>Legal Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_1__c</fullName>
        <label>Mailing Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCCC_Campus_ID__c</fullName>
        <description>As per #3324</description>
        <label>NCCC Campus ID</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCCC_Sponsor_First_Year__c</fullName>
        <label>NCCC Sponsor First Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NCCC_Sponsor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NCCC Sponsor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_d_b_a__c</fullName>
        <label>Name (d.b.a)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_current_IG_audit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No current IG audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>O__c</fullName>
        <label>Organization Characteristics</label>
        <picklist>
            <picklistValues>
                <fullName>21st CSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-year college</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-year college</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Area Agency on Aging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chamber of Commerce/Bus. Assn.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Action Agency/Prog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community-Based Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faith-based organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geographic Focus - Rural &amp; Urban</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Governor&apos;s Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hispanic-Serving College/Univ.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Historically Black College/Univ. (HBCU)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law Enforcement Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Affiliate of National Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Education Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Government, Municipal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Non-Profit (Multi-State)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Initiative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Native American Org</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other State Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Corps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School (K-12)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-Inc. Senior Corps Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service/Civic Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Commission/Alternative Admn Entity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Education Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Statewide Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tribal Government Entity</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Organization_Legal_Name_on_list__c</fullName>
        <label>Organization Legal Name on list</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organization_Type__c</fullName>
        <label>Organization Type</label>
        <picklist>
            <picklistValues>
                <fullName>For Profit Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher Education Organization - Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher Education Organization - State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HQ Internal Organizations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indian Tribe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Government - County</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Government - Municipal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Government - Township</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National and State Parks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National non-profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Native American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Commission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Education Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U.S. Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown Designation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCCC Campus</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Other_explain_in_comments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other (explain in comments)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Org_Name__c</fullName>
        <formula>Parent.Legal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Org Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone1__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Cycle_Closed__c</fullName>
        <label>Previous Cycle Closed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>R_Percent__c</fullName>
        <label>Rate Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rate_Base__c</fullName>
        <label>Rate Base</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Percent__c</fullName>
        <formula>IF(ISPICKVAL(Rate_Type__c, &apos;10%Modified Total Direct Cost (MTDC)&apos;),0.1,

Null)</formula>
        <label>Rate Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rate_Status__c</fullName>
        <label>Rate Status</label>
        <picklist>
            <controllingField>Rate_Type__c</controllingField>
            <picklistValues>
                <fullName>Final</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provisional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Predetermined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>